Reenabled VisualiserSDC